--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
 			<nav class="navbar navbar-expand-lg navbar-light" id="navbar">
 				<div class="container">	
 				  <a class="navbar-brand" href="#"><img src="asset/images/logo.png" alt=""></a>
-				  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+				  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-top" aria-controls="navbar-top" aria-expanded="false" aria-label="Toggle navigation">
 				    <span class="navbar-toggler-icon"></span>
 				  </button>
 
-				  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+				  <div class="collapse navbar-collapse" id="navbar-top">
 				    <ul class="navbar-nav ms-auto">
 				      <li class="nav-item active">
 				        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
@@ -55,8 +55,8 @@
 		<div class="container">
 			<div class="row align-items-center">
 				<div class="col-md-6 order-1 order-md-0 col-12">
-					<div class="section-heading">
-						<p class="top-title">Creative agency</p>
+					<div class="section-heading mt-sm-4">
+						<p class="top-title mb-sm-0">Creative agency</p>
 						<h2 class="section-title">Building Brand is Our Business</h2>
 						<p class="banner-para">Can days you'll forth two grass form face you saying, divide. Subdue days light whose. Stars creepeth that creature thing.</p>
 						<button class="btn btn-yellow">View project</button>
@@ -215,7 +215,7 @@
 	<section class="work-page">
 		<div class="container">
 			<div class="row">
-				<div class="col-lg-3 col-md-3 col-sm-6 col-6 mb-sm-4">
+				<div class="col-lg-3 col-md-3 col-sm-6 col-12 mb-sm-4">
 					<div class="top-img">
 						<img src="asset/images/icons/funfact/1.png" alt="">
 					</div>
@@ -224,7 +224,7 @@
 						<span>Satisfied client</span>
 					</p>
 				</div>
-				<div class="col-lg-3 col-md-3 col-sm-6 col-6 mb-sm-4">
+				<div class="col-lg-3 col-md-3 col-sm-6 col-12 mb-sm-4">
 					<div class="top-img">
 						<img src="asset/images/icons/funfact/2.png" alt="">
 					</div>
@@ -233,7 +233,7 @@
 						<span>Total project</span>
 					</p>
 				</div>
-				<div class="col-lg-3 col-md-3 col-sm-6 col-6 mb-sm-4">
+				<div class="col-lg-3 col-md-3 col-sm-6 col-12 mb-sm-4">
 					<div class="top-img">
 						<img src="asset/images/icons/funfact/3.png" alt="">
 					</div>
@@ -242,7 +242,7 @@
 						<span>work completed</span>
 					</p>
 				</div>
-				<div class="col-lg-3 col-md-3 col-sm-6 col-6 mb-sm-4">
+				<div class="col-lg-3 col-md-3 col-sm-6 col-12 mb-sm-4">
 					<div class="top-img">
 						<img src="asset/images/icons/funfact/4.png" alt="">
 					</div>
@@ -265,70 +265,72 @@
 				</div>
 			</div>
 		</div>
-		<div class="col-lg-10 col-md-12">	
-			<div class="row">	
-				<div class="col-md-6">
-					<iframe src="https://www.youtube.com/embed/dUDYGlHYvD8" width="100%" height="400" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-				</div>	
-				<div class="col-md-6 ps-4">
-					<div id="testimonial" class="carousel slide" data-bs-ride="carousel">
+		<div class="container-fluid">
+			<div class="col-lg-10 col-md-12">	
+				<div class="row">	
+					<div class="col-md-6">
+						<iframe src="https://www.youtube.com/embed/dUDYGlHYvD8" width="100%" height="400" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>	
+					<div class="col-md-6 ps-4">
+						<div id="testimonial" class="carousel slide" data-bs-ride="carousel">
 
-				        <button class="btn test_btn prev_btn" type="button" data-bs-target="#testimonial" data-bs-slide="prev">
-				              <img src="asset/images/arrow-left.png" alt="icon">
-				        </button>
-				        <button class="btn test_btn next_btn" type="button" data-bs-target="#testimonial" data-bs-slide="next">
-				              <img src="asset/images/arrow-right-b.png" alt="icon">
-				        </button>
-			            <div class="carousel-inner">
-			                <div class="carousel-item active">
-			                	<img src="asset/images/avatar.jpg" alt="client">
-			                    <p class="testimonial-content pt-3 pb-3">
-				                  Day set fifth winged divided seas years, seas is void darkness winged. Season green life Don great said won't whales together man lesser is may Itself need moveth herb  itself darkness likeness sixth creepeth.
-				                </p>
-				                <div class="d-flex justify-content-sm-center">
-				                  <div class="img">
-				                    <img src="asset/images/company-logo.png" alt="logo" class="p-3 img-circle">
-				                  </div>
-				                  <div class="user-info">
-				                    <h4 class="p-3 pb-1">Millard Costinson</h4>
-				                    <p class="ps-3">Software Developer </p>
-				                  </div>
-				                </div>
-				            </div>
-				            <div class="carousel-item">
-				                <img src="asset/images/avatar.jpg" alt="client">
-				                <p class="testimonial-content pt-3 pb-3">
-				                	Lorem ipsum dolor sit amet consectetur adipisicing, elit. Atque mollitia sequi accusamus nisi. Repellendus quam quas cupiditate veritatis aspernatur at perspicia
-				                </p>
-				                <div class="d-flex justify-content-sm-center">
-				                  <div class="img">
-				                    <img src="asset/images/company-logo.png" alt="logo" class="p-3 img-circle">
-				                  </div>
-				                  <div class="user-info">
-				                    <h4 class="p-3 pb-1">Millard Costinson</h4>
-				                    <p class="ps-3">Software Developer </p>
-				                  </div>
-				                </div>
-				            </div>
-				            <div class="carousel-item">
-				                <img src="asset/images/avatar.jpg" alt="client">
-				                <p class="testimonial-content pt-3 pb-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio possimus, non ullam eveniet? Quae tenetur natus illum, nesciunt nulla eos velit sit voluptatum? Totam nobis temporibus, eligendi similique amet reprehenderit expedita exercitationem, corporis illo, dicta</p>
-				                <div class="d-flex justify-content-sm-center">
-				                  <div class="img">
-				                    <img src="asset/images/company-logo.png" alt="logo" class="p-3 img-circle">
-				                  </div>
-				                  <div class="user-info">
-				                    <h4 class="p-3 pb-1">Millard Costinson</h4>
-				                    <p class="ps-3">Software Developer </p>
-				                  </div>
-				                </div>
-				              </div>
-				        </div>
-				    </div>
+					        <button class="btn test_btn prev_btn" type="button" data-bs-target="#testimonial" data-bs-slide="prev">
+					              <img src="asset/images/arrow-left.png" alt="icon">
+					        </button>
+					        <button class="btn test_btn next_btn" type="button" data-bs-target="#testimonial" data-bs-slide="next">
+					              <img src="asset/images/arrow-right-b.png" alt="icon">
+					        </button>
+				            <div class="carousel-inner">
+				                <div class="carousel-item active">
+				                	<img src="asset/images/avatar.jpg" alt="client">
+				                    <p class="testimonial-content pt-3 pb-3">
+					                  Day set fifth winged divided seas years, seas is void darkness winged. Season green life Don great said won't whales together man lesser is may Itself need moveth herb  itself darkness likeness sixth creepeth.
+					                </p>
+					                <div class="d-flex justify-content-sm-center">
+					                  <div class="img">
+					                    <img src="asset/images/company-logo.png" alt="logo" class="p-3 img-circle">
+					                  </div>
+					                  <div class="user-info">
+					                    <h4 class="p-3 pb-1">Millard Costinson</h4>
+					                    <p class="ps-3">Software Developer </p>
+					                  </div>
+					                </div>
+					            </div>
+					            <div class="carousel-item">
+					                <img src="asset/images/avatar.jpg" alt="client">
+					                <p class="testimonial-content pt-3 pb-3">
+					                	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur ducimus quod ea culpa explicabo tenetur nobis assumenda laudantium vero, praesentium hic! Magni quia corrupti explicabo adipisci 
+					                </p>
+					                <div class="d-flex justify-content-sm-center">
+					                  <div class="img">
+					                    <img src="asset/images/company-logo.png" alt="logo" class="p-3 img-circle">
+					                  </div>
+					                  <div class="user-info">
+					                    <h4 class="p-3 pb-1">Millard Costinson</h4>
+					                    <p class="ps-3">Software Developer </p>
+					                  </div>
+					                </div>
+					            </div>
+					            <div class="carousel-item">
+					                <img src="asset/images/avatar.jpg" alt="client">
+					                <p class="testimonial-content pt-3 pb-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio possimus, non ullam eveniet? Quae tenetur natus illum, nesciunt nulla eos velit sit voluptatum? Totam </p>
+					                <div class="d-flex justify-content-sm-center">
+					                  <div class="img">
+					                    <img src="asset/images/company-logo.png" alt="logo" class="p-3 img-circle">
+					                  </div>
+					                  <div class="user-info">
+					                    <h4 class="p-3 pb-1">Millard Costinson</h4>
+					                    <p class="ps-3">Software Developer </p>
+					                  </div>
+					                </div>
+					              </div>
+					        </div>
+					    </div>
+					</div>
+
 				</div>
-
-			</div>
-		</div>	
+			</div>	
+		</div>
 	</section>
 	<section class="our-team">
 		<div class="container">
@@ -401,7 +403,7 @@
 				</div>
 			</div>
 			<div class="row">
-		        <div class="col-lg-4 col-md-6 col-sm-6 col-12 aos-init aos-animate" data-aos="zoom-in-up">
+		        <div class="col-lg-4 col-md-6 col-12 aos-init aos-animate" data-aos="zoom-in-up">
 		            <div class="c_item ">
 		              <div class="c_img">
 		                <img src="asset/images/post/1.jpg" alt="Course one">
@@ -436,7 +438,7 @@
 		          		</div>
 		        	</div>
 		        </div>
-		        <div class="col-lg-4 col-md-6 col-sm-6 col-12 aos-init aos-animate" data-aos="zoom-in-up">
+		        <div class="col-lg-4 col-md-6 col-12 aos-init aos-animate" data-aos="zoom-in-up">
 		            <div class="c_item ">
 		              <div class="c_img">
 		                <img src="asset/images/post/1.jpg" alt="Course one">
@@ -471,10 +473,10 @@
 		          		</div>
 		        	</div>
 		        </div>
-		        <div class="col-lg-4 col-md-6 col-sm-6 col-12 aos-init aos-animate" data-aos="zoom-in-up">
+		        <div class="col-lg-4 col-md-6 col-12 aos-init aos-animate" data-aos="zoom-in-up">
 		            <div class="c_item ">
 		              <div class="c_img">
-		                <img src="asset/images/post/1.jpg" alt="Course one">
+		                <img src="asset/images/post/1.jpg" alt="Course one" class="img-responsive">
 		              </div>
 		                <div class="news-content">
 			              <div class="d-flex news-date">
@@ -512,7 +514,7 @@
 	<section class="contact-page" id="contact">
 		<div class="container">
 			<div class="row">
-				<div class="col-lg-4 col-md-6 col-12 col-sm-8">
+				<div class="col-lg-4 col-md-6 col-12">
 					<div class="section-heading">
 						<p class="top-title">Contact us</p>
 						<h3 class="section-title">Don’t Hesitate, Ask Any Query</h3>
@@ -525,13 +527,13 @@
 						</ul>
 					</div>
 				</div>
-				<div class="col-lg-8 col-md-6 col-12 col-sm-6">
+				<div class="col-lg-8 col-md-6 col-12">
 					<form action="" class="contact-form">
                     <div class="row mb-3">
-                    <div class="col-md-6">
-                      <input type="text" class="form-control" placeholder="First name" aria-label="First name">
+                    <div class="col-md-6 col-sm-6 col-12">
+                      <input type="text" class="form-control mxl-btm" placeholder="First name" aria-label="First name">
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6 col-sm-6 col-12">
                       <input type="text" class="form-control" placeholder="Last name" aria-label="Last name">
                     </div>
                   </div>
@@ -638,7 +640,7 @@
 <a href="#" id="toTopBtn" class="cd-top text-replace js-cd-top cd-top--is-visible cd-top--fade-out" data-abc="true"></a>
 
       <script src="asset/js/jquery-2.2.0.min.js"></script>
-      <script src="asset/js/bootstrap.bundle.min.js"></script>
+      <script src="asset/js/bootstrap.min.js"></script>
       <script src="asset/owl-carousel/owl.carousel.min.js"></script>
       <script src="asset/js/aos.js"></script>
       <script src="asset/js/script.js">
